# lang-anki-bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: ci.yml
migrations/2022-02-13-182044_init/: up.sql
resources/: lingoda_schema.json  lingoda_schema.json.graphql  vocabulary_items_query.graphql  vocabulary_items_query_web.graphql
src/: main.rs  schema.rs
src/lib/: actions.rs  db_config.rs  errors.rs  mod.rs  repository.rs
src/lib/downstream/: anki.rs  anki_cloze_note.rs  mod.rs
src/lib/models/: mod.rs  service_credential.rs
src/lib/upstream/: lingoda.rs  mod.rs
